clarification text added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+<app-kvvk></app-kvvk>
+
 <div>
     <!-- <div id="carouselExampleCaptions" class=" carousel-size carousel slide ">
       <div class="carousel-indicators">
