--- a/src/app/kvvk/kvvk.component.css
+++ b/src/app/kvvk/kvvk.component.css
@@ -12,7 +12,7 @@
 
 .closebutton{
     position: relative;
-    left: 1700px;
+    left: 0%;
     color: rgb(133, 133, 133);
     transition: .2s all;
     font-size: 18px;
