--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,39 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-palet font-fredoka">
-    <div class="container">
-      <a class="navbar-brand" routerLink="/"><img class="mx-2" style="width: 50px; height: 50px; border-radius: 50%;" src="assets/images/logo.jpg" alt="">LEAR BLOG</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse navbar-tool"  id="navbarNav">
-        <ul class="navbar-nav  mx-auto">
-          <li class="nav-item active">
-            <a routerLink="/" class="nav-link" >Ana Sayfa </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" *ngIf="isAdmin && isAuthenticated" routerLink="/admin">AdminGiriş</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"  routerLink="/aboutus">Hakkımızda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link"   routerLink="/contactus">Bize Ulaşın</a>
-          </li>
-        </ul>
+  <div class="container">
+    <a class="navbar-brand" routerLink="/"><img class="mx-2" style="width: 50px; height: 50px; border-radius: 50%;" src="assets/images/logo.jpg" alt="">LEAR BLOG</a>
+    <button class="navbar-toggler" type="button" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen}" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+          <a routerLink="/" class="nav-link">Ana Sayfa</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="isAdmin && isAuthenticated" routerLink="/admin">Admin Giriş</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/aboutus">Hakkımızda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contactus">Bize Ulaşın</a>
+        </li>
+      </ul>
 
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a  routerLink="/login" *ngIf="!isAuthenticated" class="nav-link">Giriş Yap</a>
-          </li>
-          <li class="nav-item">
-            <a  routerLink="/register" *ngIf="!isAuthenticated" class="nav-link">Kayıt Ol</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/account" *ngIf="isAuthenticated"  class="nav-link">Hesabım</a>
-          </li>
-          <li class="nav-item">
-            <a   href="#" class="nav-link" *ngIf="isAuthenticated" (click)="logOut()">Çıkış Yap</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a routerLink="/login" *ngIf="!isAuthenticated" class="nav-link">Giriş Yap</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/register" *ngIf="!isAuthenticated" class="nav-link">Kayıt Ol</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/account" *ngIf="isAuthenticated" class="nav-link">Hesabım</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" *ngIf="isAuthenticated" (click)="logOut()">Çıkış Yap</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
