--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,7 +5,7 @@
     <div class="row mb-5 align-items-center">
         <!-- For Demo Purpose -->
         
-        <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
+        <div class="col-lg-5 pr-lg-5 mb-5 mb-md-0 ">
             <img src="assets/images/design-and-development-process.png" alt="" class="img-fluid ">
             
             <p class="font-italic text-muted mb-0">
@@ -19,89 +19,71 @@
                 <hr>
               
         </div>
-        <div class="col-md-5" style="margin-left: 200px;">
-               <!-- Registeration Form -->
-            <form #registerForm="ngForm" (ngSubmit)="registerFormControl(registerForm)">
-               
+        <div class="col-lg-6 mb-5 mb-md-0">
+            <!-- Registration Form -->
+            <form #registerForm="ngForm" (ngSubmit)="registerFormControl(registerForm)" class="mx-5">
                 <h1 style="font-weight: 500;" class="font-fredoka-important text-center pastel-dark-low2">Bir Hesap Oluşturun</h1>
-                    <div class="row">
-                        <div class="alert alert-danger text-center my-3 input-group col-lg-6 mb-4" *ngIf="error">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="alert alert-danger text-center my-3" *ngIf="error">
                             {{error}}
                         </div>
-                        <!-- First Name -->
+                    </div>
+                    <div>
                         <div class="input-group col-lg-6 mb-4">
                             <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-left-0">
+                                <span class="input-group-text bg-white px-4 border-md">
                                     <i class="fa-solid fa-circle-user icon"></i>
                                 </span>
                             </div>
-                            <input id="firstName" type="text" required  ngModel name="firstName" placeholder="Ad" class="form-control bg-white border-left-0 border-md">
+                            <input id="firstName" type="text" required ngModel name="firstName" placeholder="Ad" class="form-control bg-white border-md">
                         </div>
-    
-                        <!-- Last Name -->
+                    </div>
+                    <div>
                         <div class="input-group col-lg-6 mb-4">
                             <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <span class="input-group-text bg-white px-4 border-md">
                                     <i class="fa-solid fa-circle-user icon"></i>
                                 </span>
                             </div>
-                            <input id="lastName" type="text" required  ngModel name="lastName" placeholder="Soyad" class="form-control bg-white border-left-0 border-md">
+                            <input id="lastName" type="text" required ngModel name="lastName" placeholder="Soyad" class="form-control bg-white border-md">
                         </div>
-    
-                        <!-- Email Address -->
+                    </div>
+                    <div>
                         <div class="input-group col-lg-6 mb-4">
                             <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <span class="input-group-text bg-white px-4 border-md">
                                     <i class="fa-solid fa-envelope icon"></i>
                                 </span>
                             </div>
-                            <input id="email" type="email" email="email" required ngModel name="email" placeholder="Email Adresi" class="form-control bg-white border-left-0 border-md">
+                            <input id="email" type="email" email="email" required ngModel name="email" placeholder="Email Adresi" class="form-control bg-white border-md">
                         </div>
-    
-                        <!-- Password -->
+                    </div>
+                    <div>
                         <div class="input-group col-lg-6 mb-4">
                             <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <span class="input-group-text bg-white px-4 border-md">
                                     <i class="fa-solid fa-lock icon"></i>
                                 </span>
                             </div>
-                            <input id="password" type="password" password="password" required minlength="8"  ngModel  name="password" placeholder="Parola" class="form-control bg-white border-left-0 border-md">
+                            <input id="password" type="password" password="password" required minlength="8" ngModel name="password" placeholder="Parola" class="form-control bg-white border-md">
                         </div>
-    
-                        <!-- Password Confirmation -->
-                        <!-- <div class="input-group col-lg-6 mb-4">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-right-0">
-                                   <i class="fa-solid fa-lock icon"></i>
-                                </span>
-                            </div>
-                            <input id="passwordConfirmation" type="text" name="passwordConfirmation" placeholder="Confirm Password" class="form-control bg-white border-left-0 border-md">
-                        </div> -->
-    
-                        <!-- Submit Button -->
-                        <div class="form-group submit-button col-lg-12 mb-0">
-                            <button type="submit" class="btn btn-success btn-block py-2" [disabled]="registerForm.invalid">
-                                Hesabınızı oluşturun
-                            </button>
-                        </div>
-    
-                        <!-- Divider Text -->
-                        <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
-                            <div class="border-bottom w-100 ml-5"></div>
-                            <span class="px-2 small text-muted font-weight-bold text-muted">VEYA</span>
-                            <div class="border-bottom w-100 mr-5"></div>
-                        </div>
-    
-                        <!-- Already Registered -->
-                        <div class="text-center w-100">
-                            <p class="text-muted font-weight-bold">Zaten Kayıtlı mısınız? <a routerLink="/login" class="text-success ml-2">Giriş Yap</a></p>
-                        </div>
-    
                     </div>
-            
-          
+                    <div class="col-lg-12 mb-4">
+                        <button type="submit" class="btn btn-success btn-block py-2" style="margin-left: 35%;" [disabled]="registerForm.invalid">Hesabınızı oluşturun</button>
+                    </div>
+                    <div class="col-lg-12 mx-auto d-flex align-items-center my-4">
+                        <div class="border-bottom w-100"></div>
+                        <span class="px-2 small text-muted font-weight-bold text-muted">VEYA</span>
+                        <div class="border-bottom w-100"></div>
+                    </div>
+                    <div class="col-lg-12">
+                        <p class="text-center text-muted font-weight-bold">Zaten Kayıtlı mısınız? <a routerLink="/login" class="text-success ml-2">Giriş Yap</a></p>
+                    </div>
+                </div>
             </form>
         </div>
+        
    
      
 
